--- a/weather.ipynb
+++ b/weather.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 1"
+    "Task 1\n",
+    "\n",
+    "codespaces\n",
+    "\n",
+    "mkdir data/weather creates a folder called weather in a folder called data\n"
    ]
   },
   {
