--- a/weather.ipynb
+++ b/weather.ipynb
@@ -4,60 +4,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intro"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task 1\n",
+    "# **Computer Infrastructure Assessment Notebook**\n",
     "\n",
-    "codespaces\n",
+    "This notebook contains my reports for each of the tasks included in the Computer Infrastructure modules assessment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "## Task 1: Create Directory Structure\n",
     "\n",
-    "mkdir data/weather creates a folder called weather in a folder called data\n"
+    "In this first task I created two subdirectories (timestamps and weather) within a directory (data).\n",
+    "\n",
+    "I done this as a command line prompt in GitHub codespaces.\n",
+    "\n",
+    "mkdir data/weather creates a folder called weather in a folder called data.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 2"
+    "***\n",
+    "## Task 2: Timestamps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 3"
+    "***\n",
+    "## Task 3: Formatting Timestamps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 4"
+    "***\n",
+    "## Task 4: Create Timestamped Files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 5"
+    "***\n",
+    "## Task 5: Download Today's Weather Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 6"
+    "***\n",
+    "## Task 6: Timestamp the Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 7"
+    "***\n",
+    "## Task 7: Write the Script"
    ]
   }
  ],
