--- a/weather.ipynb
+++ b/weather.ipynb
@@ -16,11 +16,15 @@
     "***\n",
     "## Task 1: Create Directory Structure\n",
     "\n",
-    "In this first task I created two subdirectories (timestamps and weather) within a directory (data).\n",
+    "In this first task I created two subdirectories (timestamps and weather) within a directory (data) placed at the root (the first point/point at which you couldn't *cd ..* and still be in the directory) of my repository.\n",
     "\n",
-    "I done this as a command line prompt in GitHub codespaces.\n",
+    "I done this as a command line prompt in GitHub codespaces (a cloud based development environment).\n",
     "\n",
-    "mkdir data/weather creates a folder called weather in a folder called data.\n"
+    "*mkdir* (make directory) is the command that is useful for us here. *mkdir* creates a directory (a folder) within the present working directory.\n",
+    "\n",
+    "*mkdir* data/weather creates a folder called weather in a folder called data.\n",
+    "\n",
+    "I used *ls* when in the data directory to check the two new folders were present.\n"
    ]
   },
   {
@@ -28,7 +32,19 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 2: Timestamps"
+    "## Task 2: Timestamps\n",
+    "\n",
+    "For the second task, I navigated to the timestamps directory and used the *date* Linux command to display the system date in a text file called now.txt.\n",
+    "\n",
+    "This was done with the following command: *date >> now.txt*\n",
+    "\n",
+    "I copied and pasted this command 10 times which saved 10 instances of date to the text file.\n",
+    "\n",
+    "*>>* appends a file, so each time I ran the command a new line got added.\n",
+    "\n",
+    "By default, *date* is displayed \"Day-of-week Month Day-of-Month Hour:Minute:Second Timezone Year\" (*Man date* explains this in more detail, as the *man* (manual) does with all of the commands I will mention).\n",
+    "\n",
+    "In the next task I format the date myself."
    ]
   },
   {
@@ -36,7 +52,15 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 3: Formatting Timestamps"
+    "## Task 3: Formatting Timestamps\n",
+    "\n",
+    "For the third task I used *date* once again. However, this time I formatted the output to one of my own choosing.\n",
+    "\n",
+    "The command this time was *date +\"%Y/%m/%d %H:%M:%S\" >> formatted.txt\n",
+    "\n",
+    "This saved as Year/Month/Day Hour/Minute/Second: 2024/11/08 17:05:31\n",
+    "\n",
+    "Again, I used *>>* here to append into a new file, this time to a new text file called formatted.txt."
    ]
   },
   {
