tasks 4 and 5 notes written

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "*mkdir* (make directory) is the command that is useful for us here. *mkdir* creates a directory (a folder) within the present working directory.\n",
     "\n",
-    "*mkdir* data/weather creates a folder called weather in a folder called data.\n",
+    "*mkdir data/weather* creates a folder called weather in a folder called data.\n",
     "\n",
     "I used *ls* when in the data directory to check the two new folders were present.\n"
    ]
@@ -68,7 +68,17 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 4: Create Timestamped Files"
+    "## Task 4: Create Timestamped Files\n",
+    "\n",
+    "The next task is to create a timestamped file.\n",
+    "\n",
+    "I did this by using the *touch* command. *touch* changes the timestamps of existing files or creates new files if no file exists with the file name given already.\n",
+    "\n",
+    "In backticks I used the *date* command again along with my desired format- note this time there is no '/' or ':' as these punctuation marks are not suitable for using in filenames.\n",
+    "\n",
+    "*touch `date +%Y%m%d_%H%M%S`.txt*\n",
+    "\n",
+    "This created an empty folder with a timestamped date and time."
    ]
   },
   {
@@ -76,7 +86,17 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 5: Download Today's Weather Data"
+    "## Task 5: Download Today's Weather Data\n",
+    "\n",
+    "In task 5 we bring in some live weather data from a URL. Here, I was tasked with pulling the latest weather to a new file in the weather folder.\n",
+    "\n",
+    "To do this I used the *wget* (world wide web get) command to pull from a URL. My command in full was:\n",
+    "\n",
+    "*wget -O weather.json https://prodapi.metweb.ie/observations/athenry/today*\n",
+    "\n",
+    "-O let's me save the file to a name of my own choosing (weather.json)\n",
+    "\n",
+    "The URL here points to Met Eireann's server and the file path to follow in requesting the latest weather data for Athenry."
    ]
   },
   {
