--- a/weather.ipynb
+++ b/weather.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "For the third task I used *date* once again. However, this time I formatted the output to one of my own choosing.\n",
     "\n",
-    "The command this time was *date +\"%Y/%m/%d %H:%M:%S\" >> formatted.txt\n",
+    "The command this time was *date +\"%Y/%m/%d %H:%M:%S\" >> formatted.txt*\n",
     "\n",
     "This saved as Year/Month/Day Hour/Minute/Second: 2024/11/08 17:05:31\n",
     "\n",
@@ -104,7 +104,15 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 6: Timestamp the Data"
+    "## Task 6: Timestamp the Data\n",
+    "\n",
+    "Task 6 required the same output as task 5 but this time the command was to be modified so that the saved file was in YYYYmmdd_HHMMSS format.\n",
+    "\n",
+    "As we know from task 4 we can create timestamped files using the *date* command along with backticks and our desried format for the date and time.\n",
+    "\n",
+    "As such, our modified command becomes: *wget -O `date +%Y%m%d_%H%M%S`.json https://prodapi.metweb.ie/observations/athenry/today*\n",
+    "\n",
+    "This lays the foundation for a script to be created to automate the process of pulling weather data from Met Eireann and saving it as a timestamped file. In task 7 we will do just that."
    ]
   },
   {
