Task 7 notes added

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "In this first task I created two subdirectories (timestamps and weather) within a directory (data) placed at the root (the first point/point at which you couldn't *cd ..* and still be in the directory) of my repository.\n",
     "\n",
-    "I done this as a command line prompt in GitHub codespaces (a cloud based development environment).\n",
+    "I did this as a command line prompt in GitHub codespaces (a cloud based development environment).\n",
     "\n",
     "*mkdir* (make directory) is the command that is useful for us here. *mkdir* creates a directory (a folder) within the present working directory.\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "I copied and pasted this command 10 times which saved 10 instances of date to the text file.\n",
     "\n",
-    "*>>* appends a file, so each time I ran the command a new line got added.\n",
+    "*>>* appends a file, so each time I ran the command a new line was added.\n",
     "\n",
     "By default, *date* is displayed \"Day-of-week Month Day-of-Month Hour:Minute:Second Timezone Year\" (*Man date* explains this in more detail, as the *man* (manual) does with all of the commands I will mention).\n",
     "\n",
@@ -108,7 +108,7 @@
     "\n",
     "Task 6 required the same output as task 5 but this time the command was to be modified so that the saved file was in YYYYmmdd_HHMMSS format.\n",
     "\n",
-    "As we know from task 4 we can create timestamped files using the *date* command along with backticks and our desried format for the date and time.\n",
+    "As we know from task 4 we can create timestamped files using the *date* command along with backticks and our desired format for the date and time.\n",
     "\n",
     "As such, our modified command becomes: *wget -O `date +%Y%m%d_%H%M%S`.json https://prodapi.metweb.ie/observations/athenry/today*\n",
     "\n",
@@ -120,7 +120,48 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Task 7: Write the Script"
+    "## Task 7: Write the Script\n",
+    "\n",
+    "In Visual Studio Code, I created a new file named weather.sh at the root of my repository.\n",
+    "\n",
+    "In this new file I added a shebang *#! /bin/bash* (the shebang indicates how the script should be run- in this case I have indicated that the script should run as a command line argument to /bin/bash) and then in the line below pasted in my command from task 6 (with the addition of the data/weather location for new files to be saved).\n",
+    "\n",
+    "To test the script I first had to make it executable with the command *chmod u+x ./weather.sh*. Once this had been done I just ran the command *./weather.sh*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## Task 9: Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data Frames\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## End\n",
+    "\n",
+    "***"
    ]
   }
  ],
