--- a/weather.ipynb
+++ b/weather.ipynb
@@ -88,7 +88,7 @@
     "***\n",
     "## Task 5: Download Today's Weather Data\n",
     "\n",
-    "In task 5 we bring in some live weather data from a URL. Here, I was tasked with pulling the latest weather to a new file in the weather folder.\n",
+    "In task 5 we bring in some live weather data from an API. Here, I was tasked with pulling the latest weather to a new file in the weather folder.\n",
     "\n",
     "To do this I used the *wget* (world wide web get) command to pull from a URL. My command in full was:\n",
     "\n",
@@ -124,9 +124,13 @@
     "\n",
     "In Visual Studio Code, I created a new file named weather.sh at the root of my repository.\n",
     "\n",
-    "In this new file I added a shebang *#! /bin/bash* (the shebang indicates how the script should be run- in this case I have indicated that the script should run as a command line argument to /bin/bash) and then in the line below pasted in my command from task 6 (with the addition of the data/weather location for new files to be saved).\n",
+    "In this new file I added a shebang *#! /bin/bash* (the shebang is a Linux convention that indicates how the script should be run- in this case I have indicated that the script should run as a command line argument to /bin/bash) and then in the line below pasted in my command from task 6 (with the addition of the data/weather location for new files to be saved).\n",
     "\n",
-    "To test the script I first had to make it executable with the command *chmod u+x ./weather.sh*. Once this had been done I just ran the command *./weather.sh*."
+    "*#! /bin/bash*\n",
+    "\n",
+    "*wget -O \"data/weather/$(date +%Y%m%d_%H%M%S).json\" https://prodapi.metweb.ie/observations/athenry/today*\n",
+    "\n",
+    "To test the script I first had to make it executable with the command *chmod u+x ./weather.sh* (which means change mode; user is allowed to execute weather.sh script). Once this had been done I will be able to read, write and execute (as opposed to just read and write). So, to execute I just run the command *./weather.sh*. I knew it executed correctly as a new timestamped file was added to my weather folder."
    ]
   },
   {
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +156,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>weatherDescription</th>\n",
+       "      <th>text</th>\n",
+       "      <th>windSpeed</th>\n",
+       "      <th>windGust</th>\n",
+       "      <th>cardinalWindDirection</th>\n",
+       "      <th>windDirection</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>dayName</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reportTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>10</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>15</td>\n",
+       "      <td>-</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2024-12-16</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>10</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>15</td>\n",
+       "      <td>-</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2024-12-16</td>\n",
+       "      <td>01:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>11</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>19</td>\n",
+       "      <td>-</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2024-12-16</td>\n",
+       "      <td>02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>11</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>20</td>\n",
+       "      <td>-</td>\n",
+       "      <td>W</td>\n",
+       "      <td>270</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2024-12-16</td>\n",
+       "      <td>03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>10</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>15</td>\n",
+       "      <td>39</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>2024-12-16</td>\n",
+       "      <td>04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name  temperature symbol weatherDescription      text  windSpeed  \\\n",
+       "0  Athenry           10    04n             Cloudy  \"Cloudy\"         15   \n",
+       "1  Athenry           10    04n             Cloudy  \"Cloudy\"         15   \n",
+       "2  Athenry           11    04n             Cloudy  \"Cloudy\"         19   \n",
+       "3  Athenry           11    04n             Cloudy  \"Cloudy\"         20   \n",
+       "4  Athenry           10    04n             Cloudy  \"Cloudy\"         15   \n",
+       "\n",
+       "  windGust cardinalWindDirection  windDirection  humidity  rainfall  pressure  \\\n",
+       "0        -                    SW            225        83       0.0      1028   \n",
+       "1        -                    SW            225        81       0.0      1028   \n",
+       "2        -                    SW            225        81       0.0      1028   \n",
+       "3        -                     W            270        80       0.0      1027   \n",
+       "4       39                    SW            225        90       0.0      1027   \n",
+       "\n",
+       "  dayName       date reportTime  \n",
+       "0  Monday 2024-12-16      00:00  \n",
+       "1  Monday 2024-12-16      01:00  \n",
+       "2  Monday 2024-12-16      02:00  \n",
+       "3  Monday 2024-12-16      03:00  \n",
+       "4  Monday 2024-12-16      04:00  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_json('data/weather/20241216_142943.json')\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,8 +342,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
