--- a/weather.ipynb
+++ b/weather.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# **Computer Infrastructure Assessment Notebook**\n",
     "\n",
-    "This notebook contains my reports for each of the tasks included in the Computer Infrastructure modules assessment."
+    "This notebook contains my reports for each of the tasks included in the Computer Infrastructure module.\n",
+    "\n",
+    "`Code blocks` are used wherever code is referenced."
    ]
   },
   {
@@ -16,9 +18,9 @@
     "***\n",
     "## Task 1: Create Directory Structure\n",
     "\n",
-    "In this first task I created two subdirectories (timestamps and weather) within a directory (data) placed at the root (the first point/point at which you couldn't `cd ..` and still be in the directory) of my repository.\n",
+    "In this first task I created two subdirectories (timestamps and weather) within a directory (data) placed at the root (the first point, or the point at which you couldn't `cd ..` and still be in the directory) of my repository.\n",
     "\n",
-    "I did this as a command line prompt in GitHub codespaces (a cloud based development environment).\n",
+    "I did this as a command line prompt in GitHub codespaces. Codespaces is a cloud based development environment acessible on GitHub via the repository home page. Codespaces runs Visual Studio code on the users browser. This is where the majority of the work for this assessment was completed.\n",
     "\n",
     "`mkdir` (make directory) is the command that is useful for us here. `mkdir` creates a directory (a folder) within the present working directory.\n",
     "\n",
@@ -36,7 +38,7 @@
     "\n",
     "For the second task, I navigated to the timestamps directory and used the `date` Linux command to display the system date in a text file called now.txt.\n",
     "\n",
-    "This was done with the following command: `date >> now.txt`\n",
+    "This was done with the following command: `date >> now.txt`.\n",
     "\n",
     "I copied and pasted this command 10 times which saved 10 instances of date to the text file.\n",
     "\n",
@@ -56,7 +58,7 @@
     "\n",
     "For the third task I used `date` once again. However, this time I formatted the output to one of my own choosing.\n",
     "\n",
-    "The command this time was `date +\"%Y/%m/%d %H:%M:%S\" >> formatted.txt`\n",
+    "The command this time was `date +\"%Y/%m/%d %H:%M:%S\" >> formatted.txt`.\n",
     "\n",
     "This saved as Year/Month/Day Hour/Minute/Second: 2024/11/08 17:05:31\n",
     "\n",
@@ -72,9 +74,9 @@
     "\n",
     "The next task is to create a timestamped file.\n",
     "\n",
-    "I did this by using the `touch` command. `touch` changes the timestamps of existing files or creates new files if no file exists with the file name given already.\n",
+    "I did this by using the `touch` command. `touch` changes the timestamps of existing files or creates new files if no file already exists with the file name given.\n",
     "\n",
-    "In backticks I used the `date` command again along with my desired format- note this time there is no '/' or ':' as these punctuation marks are not suitable for using in filenames.\n",
+    "In backticks I used the `date` command again along with my desired format- note this time there is no '/' or ':' included as these punctuation marks are not suitable for using in filenames.\n",
     "\n",
     "``` touch `date +%Y%m%d_%H%M%S`.txt ```\n",
     "\n",
@@ -110,7 +112,7 @@
     "\n",
     "As we know from task 4 we can create timestamped files using the `date` command along with backticks and our desired format for the date and time.\n",
     "\n",
-    "As such, our modified command becomes: ``` wget -O `date +%Y%m%d_%H%M%S`.json https://prodapi.metweb.ie/observations/athenry/today ```\n",
+    "As such, our modified command becomes: ``` wget -O `date +%Y%m%d_%H%M%S`.json https://prodapi.metweb.ie/observations/athenry/today ```.\n",
     "\n",
     "This lays the foundation for a script to be created to automate the process of pulling weather data from Met Eireann and saving it as a timestamped file. In task 7 we will do just that."
    ]
@@ -124,13 +126,17 @@
     "\n",
     "In Visual Studio Code, I created a new file named weather.sh at the root of my repository.\n",
     "\n",
-    "In this new file I added a shebang `#! /bin/bash` (the shebang is a Linux convention that indicates how the script should be run- in this case I have indicated that the script should run as a command line argument to /bin/bash) and then in the line below pasted in my command from task 6 (with the addition of the data/weather location for new files to be saved).\n",
+    "In this new file I added a shebang `#! /bin/bash` (the shebang is a Linux convention that indicates how the script should be run- in this case I have indicated that the script should run as a command line argument to /bin/bash). Then, in the line below, I pasted in my command from task 6 (with the addition of the data/weather location for new files to be saved). This read as follows:\n",
     "\n",
-    "``` #! /bin/bash ```\n",
+    "```\n",
+    "#! /bin/bash\n",
     "\n",
-    "``` wget -O \"data/weather/$(date +%Y%m%d_%H%M%S).json\" https://prodapi.metweb.ie/observations/athenry/today ```\n",
+    "wget -O \"data/weather/$(date +%Y%m%d_%H%M%S).json\" https://prodapi.metweb.ie/observations/athenry/today \n",
+    "```\n",
     "\n",
-    "To test the script I first had to make it executable with the command `chmod u+x ./weather.sh` (which means change mode; user is allowed to execute weather.sh script). Once this had been done I will be able to read, write and execute (as opposed to just read and write). So, to execute I just run the command *./weather.sh*. I knew it executed correctly as a new timestamped file was added to my weather folder."
+    "To test the script I first had to make it executable with the command `chmod u+x ./weather.sh` (change mode; user should be allowed to execute weather.sh script). Once this had been done I was able to read, write and execute (as opposed to just read and write). To check that this was set up correctly I navigated to the root of my directory (where the file sits) and used the `ls -l` command which shows permisions, file size and other useful metadata. \n",
+    "\n",
+    "Once I was happy the permissions had changed all that was left to do was to execute the script. To do so I ran the command `./weather.sh`. I knew it executed correctly as a new timestamped file was added to my weather folder. The project component of this module is to utilise the weather.sh script created in this task as a workflow which runs daily. "
    ]
   },
   {
@@ -143,19 +149,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this final task I will be analysing the data in one of the Athenry weather JSON files using the pandas module. I will begin by importing my libraries: pandas and matplotlib.\n",
+    "\n",
+    "Pandas is used for the DataFrame data structure (a two dimensional data structure with rows and columns, like a spreadsheet). It allows us to investigate CSV files, amongst other features.\n",
+    "\n",
+    "Matplotlib is a plotting library. Pyplot allows for interactive plots and programmatic plot generation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Data Frames\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "#Plotting\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Now let's read in one of the weather files and print the first few rows of data:"
+   ]
   },
   {
    "cell_type": "code",
@@ -327,6 +349,50 @@
     "df = pd.read_json('data/weather/20241216_142943.json')\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now plot some of the variables in the dataset.\n",
+    "\n",
+    "Let's start off by plotting temperature over time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This concludes the task component of the computer infrastructure module.\n",
+    "\n",
+    "Along with the tasks I also completed the project; creating a workflow to automate the running of the weather.sh script to run daily."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "| Author                                 | Title                                                                                                         | Blurb                           |\n",
+    "| :---                                   |    :----:                                                                                                     |          :---:                  |\n",
+    "| Driscoll, Mike. Real Python         | [*Jupyter Notebook: An Introduction*](https://realpython.com/jupyter-notebook-introduction/)                  | A quick introduction to Jupyter Notebooks; how to create and manage them.     |\n",
+    "| GitHub Docs | [*Basic writing and formatting syntax: Create sophisticated formatting for your prose and code on GitHub with simple syntax*](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax) | Guide for the basics of markdown; stylising text, making lists, adding images, etc. |\n",
+    "| GitHub Docs | [*GitHub Codespaces Overview*](https://docs.github.com/en/codespaces/overview) | GitHub's guide for Codespaces. |\n",
+    "| Pandas Documentation | [*10 Minutes to Pandas Guide*](https://pandas.pydata.org/docs/user_guide/10min.html) | How to create arrays with Panda's, like most of the articles referenced here- this one includes info for both beginners and those with a little more experience. Pick and choose what you need from it. |\n",
+    "| Solomon, Brad. Real Python | [*Python Plotting with Matplotlib (Guide)*](https://realpython.com/python-matplotlib-guide/) | Lots of useful information on plotting. |\n",
+    "|  Wikimedia Commons | [Desktop Image](https://upload.wikimedia.org/wikipedia/commons/6/6b/Gem_11_Desktop.png)| This is the cover image used for this notebook (a user interface/desktop graphic).   |\n",
+    "| W3 Schools | [*Matplotlib Tutorials*](https://www.w3schools.com/python/matplotlib_intro.asp) | Another useful one for plotting. |\n"
    ]
   },
   {
