--- a/weather.ipynb
+++ b/weather.ipynb
@@ -154,14 +154,14 @@
    "source": [
     "In this final task I will be analysing the data in one of the Athenry weather JSON files using the pandas module. I will begin by importing my libraries: pandas and matplotlib.\n",
     "\n",
-    "Pandas is used for the DataFrame data structure (a two dimensional data structure with rows and columns, like a spreadsheet). It allows us to investigate CSV files, amongst other features.\n",
+    "Pandas is used for the DataFrame data structure (a two dimensional data structure with rows and columns, like a spreadsheet). It allows us to investigate JSON files, amongst other features.\n",
     "\n",
     "Matplotlib is a plotting library. Pyplot allows for interactive plots and programmatic plot generation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +176,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's read in one of the weather files and print the first few rows of data:"
+    "Now let's read in one of the weather files using pandas and print the first few rows of data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -340,15 +340,94 @@
        "4  Monday 2024-12-16      04:00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_json('data/weather/20241216_142943.json')\n",
+    "df1216 = pd.read_json('data/weather/20241216_142943.json')\n",
     "\n",
-    "df.head()"
+    "df1216.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our weather data contains a range of variables outlining the weather conditions in Athenry on the day our script pulled from Met Eireanns API.\n",
+    "\n",
+    "Let's take a look at some summary statistics for the numerical data included in the dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       temperature  windSpeed   humidity     pressure\n",
+      "count    15.000000  15.000000  15.000000    15.000000\n",
+      "mean     10.800000  19.133333  85.000000  1026.866667\n",
+      "std       0.414039   3.419830   3.047247     0.743223\n",
+      "min      10.000000  13.000000  80.000000  1026.000000\n",
+      "25%      11.000000  17.000000  82.500000  1026.000000\n",
+      "50%      11.000000  20.000000  85.000000  1027.000000\n",
+      "75%      11.000000  21.000000  87.000000  1027.000000\n",
+      "max      11.000000  26.000000  90.000000  1028.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Summary statistics\n",
+    "print(df1216[['temperature', 'windSpeed', 'humidity', 'pressure']].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Upon inspection of the above table it lead me to believe this dataset was not representative of the entire day.\n",
+    "\n",
+    "diurnal temperature range\n",
+    "\n",
+    "Windspeed and humidity have some more fluctuation but I think by including some different days we could produce some more interesting results. Let's combine the JSON files for three consective days."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00']\n",
+      "['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00']\n",
+      "['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading in the next two days as seperate dataframes\n",
+    "df1217 = pd.read_json('data/weather/20241217_151313.json')\n",
+    "df1218 = pd.read_json('data/weather/20241218_111805.json')\n",
+    "\n",
+    "# Printing the report times available in each dataset\n",
+    "print(df1216['reportTime'].tolist())\n",
+    "print(df1217['reportTime'].tolist())\n",
+    "print(df1218['reportTime'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we can see that when we pull from the API we get the data up to the latest hour. So, when I manually pulled the weather data on the 16th and 17th of December I done so between 2PM and 3PM (we timestamped our files so I can see exactly when I made the request with the API- this was at 3:13PM). Then, the automated workflow ran after 11AM. Ideally, we would set the workflow to run at 23:00 so that we get the max amount of data per day."
    ]
   },
   {
@@ -357,7 +436,28 @@
    "source": [
     "We can now plot some of the variables in the dataset.\n",
     "\n",
-    "Let's start off by plotting temperature over time:"
+    "Let's start off by plotting "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next let's create a pie chart of the wind direction for this day:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, let's see if there is any relationship between "
    ]
   },
   {
@@ -386,9 +486,11 @@
     "\n",
     "| Author                                 | Title                                                                                                         | Blurb                           |\n",
     "| :---                                   |    :----:                                                                                                     |          :---:                  |\n",
+    "| Data.Gov.ie | [ Today's Weather Athenry ](https://data.gov.ie/dataset/todays-weather-athenry) | Data.Gov.ie's info on the Athenry Weather observations. |\n",
     "| Driscoll, Mike. Real Python         | [*Jupyter Notebook: An Introduction*](https://realpython.com/jupyter-notebook-introduction/)                  | A quick introduction to Jupyter Notebooks; how to create and manage them.     |\n",
     "| GitHub Docs | [*Basic writing and formatting syntax: Create sophisticated formatting for your prose and code on GitHub with simple syntax*](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax) | Guide for the basics of markdown; stylising text, making lists, adding images, etc. |\n",
     "| GitHub Docs | [*GitHub Codespaces Overview*](https://docs.github.com/en/codespaces/overview) | GitHub's guide for Codespaces. |\n",
+    "| Met Eireann | [*Diurnal Temperature Range (DTR) ](https://www.met.ie/cms/assets/uploads/2022/09/DTR.pdf) | I reference this term when I look into why one of my datasets has a 1 degree temperature range for the day (it doesn't really- the dataset is just incomplete) |\n",
     "| Pandas Documentation | [*10 Minutes to Pandas Guide*](https://pandas.pydata.org/docs/user_guide/10min.html) | How to create arrays with Panda's, like most of the articles referenced here- this one includes info for both beginners and those with a little more experience. Pick and choose what you need from it. |\n",
     "| Solomon, Brad. Real Python | [*Python Plotting with Matplotlib (Guide)*](https://realpython.com/python-matplotlib-guide/) | Lots of useful information on plotting. |\n",
     "|  Wikimedia Commons | [Desktop Image](https://upload.wikimedia.org/wikipedia/commons/6/6b/Gem_11_Desktop.png)| This is the cover image used for this notebook (a user interface/desktop graphic).   |\n",
